Clean up for tagging for the conference paper

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Submission/BaseLineExperiments/TotalDataset/*
 Submission/BaseLineExperiments/TrainingDataset/*
 Submission/BaseLineExperiments/TestDataset/*
 IUI_files/DATASET
+temp
